2007-05-12  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (get_selected_item),
	(wp_tree_delete_event), (wp_update_preview), (desktop_init):
	* appearance.glade: move some strings to glade file, don't leak the
	file selector, plus a few minor beautifications

2007-05-11  Denis Washington  <denisw@svn.nome.org>

	* appearance-desktop.c: (desktop_init):
	Fix the background list not being saved when closing the capplet window.

2007-05-10  Denis Washington  <denisw@svn.nome.org>

	* appearance.h:
	* appearance-desktop.c:
	* appearance.glade:
	* gnome-wp-item.c:
	* Makefile.am:
	* wp-cellrenderer.[ch]:
	Replace the background treeview with an icon view that only shows the
	thumbnails. Tooltips are to be done.

2007-05-09  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init):
	* appearance.glade: change Open button label to Install...

2007-05-09  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: make sure that appearance.h (and thereby config.h)
	is included first; constify strings

	* gnome-wp-xml.c: (gnome_wp_xml_load_xml): fix leak

2007-05-08  Denis Washington  <denisw@svn.nome.org>

	* appearance.glade:
	Set mnemonic widgets for the labels in the Desktop tab.

2007-05-07  Thomas Wood  <thos@gnome.org>

	* appearance-style.c: (conv_to_widget_cb), (prepare_combo): Remove some
	unnecessary code.

2007-05-07  Thomas Wood  <thos@gnome.org>

	* appearance-style.c: (prepare_combo): Fix icon theme combo box

2007-05-07  Thomas Wood  <thos@gnome.org>

	* appearance-style.c: (prepare_combo): Use GConfPropertyEditor for theme
	combo boxes

2007-05-07  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* appearance-main.c: (main):
	* appearance-style.c:
	* appearance-style.h:
	- Add files for Style tab
	- Implement changing gtk and metacity themes

	* appearance.glade: Change "Themes" to "Theme" and name some widgets

2007-05-07  Denis Washington  <denisw@svn.nome.org>

	* appearance.glade:
	* appearance-desktop.c: (desktop_init):