@@ -1,5 +1,12 @@
 2007-05-12  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-desktop.c: (wp_scale_type_changed),
+	(wp_color_changed), (wp_props_wp_set), (wp_props_wp_selected),
+	(wp_load_stuffs): fix secondary color picker being ignored and initial
+	dialog state when no wallpaper is selected
+
+2007-05-12  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-desktop.c: (get_selected_item),
 	(wp_tree_delete_event), (wp_update_preview), (desktop_init):
 	* appearance.glade: move some strings to glade file, don't leak the
